    returned after authentication, such as authentication rejected errors
    from the user information service.  Without this behavior, if the
    custom error sent the user to another page that also required
    authentication, the user would have to log in again and may given up,
    thinking that authentication was looping.

    The webauth_base64_* functions have been removed from libwebauth, as
    have the corresponding Perl bindings.  For C programs, use the
    apr_base64_* functions from APR-Util instead.  For Perl programs, use
    MIME::Base64.

    The webauth_attr_*, webauth_attrs_*, and webauth_hex_* functions have
    been removed from libwebauth, as have the corresponding Perl bindings.
    These functions provided a low-level interface to internal WebAuth
    data structures that is no longer necessary.

    Remove webauth.h.  The only remaining contents of interest to clients
    were the WebAuth protocol error constants, which have now moved to
    webauth/tokens.h.

    Add public webauth_keyring_encode and webauth_keyring_decode functions
    that encode and decode keyrings into the serialization format used for
    storing them in files.  These are useful for sending WebAuth keyrings
    over other protocols.  Add a corresponding keyring_decode method to
    the Perl WebAuth class and encode and decode methods to the
    WebAuth::Keyring class.

    The WA_TK_*, WA_TT_*, and WA_SA_* preprocessor constants are no longer
    provided by webauth.h.  These contained a subset of the encoding rules
    for the WebAuth wire protocol, but were not really useful to clients
    of the library.

    The WA_ERR_KEYRING_* error codes have changed to WA_ERR_FILE_* and
    will be used for any errors inside the WebAuth library when reading or
    writing to files.  Now that WebAuth can report rich error messages,
    there is no need for the codes to be this specific.  Add new
    WA_ERR_FILE_NOT_FOUND error, which replaces WA_ERR_KEYRING_OPENREAD